force-app/main/default/objects/ccrz__E_RichContent__c/ccrz__E_RichContent__c.object-meta.xml
<CustomObject>
    <label>CC Rich Content</label>
    <nameField>
        <label>CC Rich Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Rich Contents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>