force-app/main/default/objects/ccrz__E_RichContent__c/fields/ccrz__ContentKey__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ContentKey__c</fullName>
    <description>The key used to determine which piece of content will appear on the page</description>
    <externalId>true</externalId>
    <label>ContentKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>