force-app/main/default/objects/ccrz__E_RichContent__c/fields/ccrz__EffectiveStart__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EffectiveStart__c</fullName>
    <description>The first date time this content will be available.</description>
    <label>EffectiveStart</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>