force-app/main/default/objects/ccrz__E_RichContent__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Sequence number used to determine which content will display for a given content key</description>
    <label>Sequence</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>