force-app/main/default/objects/ccrz__E_RichContent__c/fields/ccrz__Status__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Status__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <description>Status of the content (published, draft...)</description>
    <label>Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>