force-app/main/default/objects/ccrz__E_RichContent__c/fields/ccrz__Storefront__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Storefront__c</fullName>
    <description>The storefront that this content is associated with</description>
    <label>Storefront</label>
    <length>255</length>
    <type>Text</type>
</CustomField>