force-app/main/default/objects/ccrz__E_RichContent__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__Storefront__c</columns>
    <columns>ccrz__Status__c</columns>
    <columns>ccrz__Sequence__c</columns>
    <columns>ccrz__EffectiveStart__c</columns>
    <columns>ccrz__EffectiveEnd__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>